kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laravel-moris
  labels:
    app: laravel-moris
    environment: production
